--- a/ist-coding-challenge/tsconfig.json
+++ b/ist-coding-challenge/tsconfig.json
@@ -6,6 +6,8 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "Bundler",
+    "resolvePackageJsonExports": true,
+    "resolvePackageJsonImports": true,
     "resolveJsonModule": true,
     "strict": true,
     "outDir": "./build",
